--- a/resources.html
+++ b/resources.html
@@ -46,16 +46,28 @@
           </div>
           <div class="app" id="lang">
             <div class="text">
-                <h2>Welcome to Lil B’! </h2>
+                <h2>Resources for Psychological and Physical Assistance</h2>
 <ul>
-	<li>Lil B’ is an app created to help children learn numbers, letters and elementary math and more in fun and easy way!</li>
-	<li>Games are designed for children up from 2 years old; [For kids of all ages!]</li>
-	<li>It consists of 6 fun and educational mini-games which makes it possible for children to progress at their own pace;</li>
-	<li>3 levels of difficultly are available to match needs and abilities of children in different age groups;</li>
-	<li>With Lil B’ your child will be able to build a strong foundation for reading, writing and math skills!</li>
-	<li>Helps develop motor skills, attention and memory!</li>
-	<li>All games and levels are accessible absolutely free!</li>
+	<li>Listed below is an array of resources designed to assist physically and psychologically strained minors.</li>
+	<ol>
+        <li>
+            <a href="http://www.mind.org.uk/information-support/types-of-mental-health-problems/depression/self-care-for-depression/">
+                Psychological Assistance
+            </a>
+        </li>
+        <li>
+            <a href="http://www.iasp.info/resources/Crisis_Centres/Europe/">
+                IASP - Crisis Centers in Europe (Suicide Prevention)
+            </a>
+        </li>
+        <li>
+             <a href="http://www.iasp.info/resources/Crisis_Centres/Europe/">
+                IASP - Crisis Centers in Europe (Suicide Prevention)
+            </a>
+        </li>
+    </ol>
 </ul>
+
             </div>
               <img class="screenshot" src="Images/screenshot/langmob.png" alt="Choosing Language"/>
           </div>
