--- a/resources_ar.html
+++ b/resources_ar.html
@@ -7,58 +7,145 @@
         <meta name="description" content="Website created to accompany Syrian literacy app">
         <meta name="keywords" content="Syria, accessibility, literacy">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="style_arab.css"/>
     </head>
 
-    <body>
+    <body style="background-color: #d8fcdc">
 
       <nav>
           <!-- Colorized Menu buttons left side -->
-          <div id="Button1"><a href="index.html"><h1>Button1</h1></a></div>
-          <div id="Button2"><a href="resources.html"><h1>Button2</h1></a></div>
-          <div id="Button3"><a href="about.html"><h1>Button3</h1></a></div>
-          <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
+          <div id="Dropdown">
+            <div id="Button1"><a href="index.html"><img src="Images/LilB-small.png"</a></div>
+            <a href="resources_ar.html"><div id="Button2"><h1>موارد</h1></div></a>
+            <a href="about_ar.html"><div id="Button3"><h1>معلومات عنا</h1></div></a>
+          </div>
+          <!-- Languages -->
+          <div class="Language">
+          	<a href="index.html">
+              <img id="Language" src="Images\english_language.jpg" alt="English Language"/>
+              <h5>English</h5>
+            </a>
+          </div>
+           <!-- <a href="index_ar.html">
+              <img id="Language" src="Images\arabic_language.png" />
+            </a> -->
+
       </nav>
 
-      <div id="Contentwrapper">
-        <!-- Button for changing language of site -->
-        <a href="resources.html">
-          <img id="Language" src="Images\english_language.jpg" />
-        </a>
-        <a href="resources_ar.html">
-          <img id="Language" src="Images\arabic_language.png" />
-        </a>
-        <!-- Content of website in center of screen-->
         <div id="Content">
-
-          <h1>Resources</h1>
-          <p>
-            <!-- Insert content -->
-          </p>
-
-          <h2><!-- Insert content --><h2>
-            <p>
-              <!-- Insert content -->
-            </p>
-            <p>
-              <!-- Insert content -->
-            </p>
-
+          <div class="app">
+            <div id="Logo">
+              <img src="Images/Lil-B-Banner-MM-6.png" alt="Logo">
+            </div>
+          </div>
+          <div class="app" id="lang">
+            <div class="text">
+                <h2>مرحبا بكم في الليل ب '! </h2>
+<ul>
+	<li>الليل ب 'هو التطبيق التي أنشئت لمساعدة الأطفال على تعلم الأرقام والحروف والرياضيات الابتدائية وأكثر في طريقة ممتعة وسهلة!</li>
+	<li>تم تصميم ألعاب للأطفال حتى من 2 سنة. [للأطفال من جميع الأعمار!]</li>
+	<li>وهو يتألف من 6 متعة والتعليمية الألعاب المصغرة التي تجعل من الممكن للأطفال لإحراز تقدم في وتيرتها.</li>
+	<li>تتوفر لتتناسب مع احتياجات وقدرات الأطفال في مختلف الفئات العمرية 3 مستويات من الصعوبة.</li>
+	<li>مع الليل ب 'طفلك سوف تكون قادرة على بناء قاعدة قوية للقراءة والكتابة والرياضيات المهارات!</li>
+	<li>يساعد على تطوير المهارات الحركية والانتباه والذاكرة!</li>
+	<li>جميع الألعاب ومستويات يمكن الوصول إليها بحرية مطلقة!</li>
+</ul>
+            </div>
+              <img class="screenshot" src="Images/screenshot/langmob.png" alt="Choosing Language"/>
+          </div>
+          <div class="app" id="bokstav">
+            <div class="text">
+                <h2>الميزات</h2>
+              <ul>
+	<li>الليل ب 'هو التطبيق التي أنشئت لمساعدة الأطفال على تعلم الأرقام والحروف والرياضيات الابتدائية وأكثر في طريقة ممتعة وسهلة!</li>
+	<li>تم تصميم ألعاب للأطفال حتى من 2 سنة. [للأطفال من جميع الأعمار!]</li>
+	<li>وهو يتألف من 6 متعة والتعليمية الألعاب المصغرة التي تجعل من الممكن للأطفال لإحراز تقدم في وتيرتها.</li>
+	<li>تتوفر لتتناسب مع احتياجات وقدرات الأطفال في مختلف الفئات العمرية 3 مستويات من الصعوبة.</li>
+	<li>مع الليل ب 'طفلك سوف تكون قادرة على بناء قاعدة قوية للقراءة والكتابة والرياضيات المهارات!</li>
+	<li>يساعد على تطوير المهارات الحركية والانتباه والذاكرة!</li>
+	<li>جميع الألعاب ومستويات يمكن الوصول إليها بحرية مطلقة!</li>
+</ul>
+            </div>
+              <img class="screenshot" src="Images/screenshot/bokstavmob.png" alt="Writing letters"/>
+          </div>
+          <div class="app" id="bil">
+            <div class="text">
+                <h2>ألعاب 6-مصغرة</h2>
+             <ul>
+	<li>مطابقة الأشكال والألوان</li>
+	<li>تعلم الأرقام والعد</li>
+	<li>تعلم الأبجدية</li>
+	<li>تعلم أسماء الحشرات، الحيوانات، الزهور، والمركبات والطقس</li>
+	<li>هجاء (4 محاور رئيسية: الحيوانات، الزهور، والمركبات والطقس)</li>
+	<li>التعليم الابتدائي الرياضيات (الجمع والطرح)</li>
+</ul>
+            </div>
+              <img class="screenshot" src="Images/screenshot/bilmob.png" alt="Identify objects"/>
+          </div>
+          <div class="app">
+            <div id="store">
+              <a href="https://play.google.com/store/apps"><img src="Images/store/android/playstoreeng.svg" alt="Google Play Store"></a>
+              <a href="https://www.appstore.com/"><img src="Images/store/apple/appstoreeng.svg" alt="Apple App Store"></a>
+              <a href="https://www.microsoft.com/en-gb/store/apps/windows-phone"><img src="Images/store/win/wineng.svg" alt="Microsoft Store"></a>
+            </div>
+          </div>
         </div>
 
-        <!-- Footerbar in bottom of screen -->
-        <footer>
-          <div>
-            <a href="https://www.facebook.com/"><img src=".png"/></a>
-            <a href="https://twitter.com/"><img src=".png"/></a>
-            <a href="https://snapchat.com/"><img src=".png"/></a>
-            <a href="https://plus.google.com/"><img src=".png"/></a>
+
+        <!-- vv Footer at bottom of screen vv -->
+        <div id="footer">
+
+
+          <div id="About">
+            <p>
+            <a href="mailto:s309732@stud.hioa.no?Subject=Question%20about%20LilB">اتصل بنا</a>
+            <br>
+            © 2016  كلية أوسلو وجامعة أكرشوس للعلوم التطبيقية
+            <br>
+            التي أنشأتها Yanislav، جوليان، إسماعيل، باس، ماريا، وإيدا، فواد، جوناس، Sahand في وعرفان
+            </p>
           </div>
-          <div>
-            <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
-            <a href="mailto:s309732@stud.hioa.no">Contact</a>
+          <div id="Follow">
+            <table>
+              <tr>
+                <th colspan="2">وسائل الإعلام</th>
+              </tr>
+              <tr class="imgs">
+                <td>
+                  <a class="SocialIcon" href="https://www.facebook.com/">
+                  <img src="Images/social/Facebook.svg" alt="Facebook"/>
+                </a>
+                </td>
+                <td>
+                  <a class="SocialIcon" href="https://twitter.com/">
+                    <img style="width: 4em" src="Images/social/Twitter.svg" alt="Twitter"/>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a  href="https://snapchat.com/">
+                    <img class="SocialIcon" src="Images/social/Snapchat.svg" alt="Snapchat"/>
+                  </a>
+                </td>
+                <td>
+                  <a  href="https://rss.com/">
+                    <img class="SocialIcon" src="Images/social/RSS%20feed.svg" alt="RSS"/>
+                  </a>
+                </td>
+              </tr>
+            </table>
           </div>
-        </footer>
+          <div id="footerLanguage">
+            <a href="index_arabicNew.html">
+              <h5>العربية</h5>
+            </a>
+             <a href="index.html">
+              <h5>ENGLISH</h5>
+            </a>
+        </div>
+
+        </div>
 
       </div>
 
