--- a/index_arabicNEW.html
+++ b/index_arabicNEW.html
@@ -16,8 +16,8 @@
           <!-- Colorized Menu buttons left side -->
           <div id="Dropdown">
             <div id="Button1"><a href="index.html"><img src="Images/LilB-small.png"</a></div>
-            <a href="resources.html"><div id="Button2"><h1>موارد</h1></div></a>
-            <a href="about.html"><div id="Button3"><h1>معلومات عنا</h1></div></a>
+            <a href="resources_ar.html"><div id="Button2"><h1>موارد</h1></div></a>
+            <a href="about_ar.html"><div id="Button3"><h1>معلومات عنا</h1></div></a>
           </div>
           <!-- Languages -->
           <div class="Language">
